Use ordered lists where appropriate

--- a/conduite-conduct-eng.html
+++ b/conduite-conduct-eng.html
@@ -59,6 +59,9 @@
 <link href="/clf20/css/base-institution.css" media="screen, print" rel="stylesheet" type="text/css" />
 <link href="/clf20/css/institution.css" media="screen, print" rel="stylesheet" type="text/css" />
 <link href="/pac/cse-egd/css/custom.css" media="screen" rel="stylesheet" type="text/css" />
+<style>
+  ol li { list-style: none; margin-top: 10px; }
+</style>
 <!-- CUSTOM SCRIPTS/CSS END | FIN DES SCRIPTS/CSS PERSONNALISES -->
 <!-- TEMPLATE PRINT CSS BEGINS | DEBUT DU CSS DU GABARIT POUR L'IMPRESSION -->
 <link href="/clf20/css/pf-if.css" rel="stylesheet" type="text/css" />
@@ -117,21 +120,23 @@
 					of this federal government facility. </p>
 				<p><strong>1.2&nbsp;Guiding Principles</strong>. All businesses operating at the
 					Esquimalt Graving Dock are to abide by the following principles:</p>
-				<p>(a) The Government of Canada operates the Esquimalt Graving Dock as an
-					open, public facility, providing service on a first-come, first-served basis.
-					Engaging in behavior contrary to its use as a unique public facility does
-					not allow for a healthy and competitive marketplace on the West Coast;</p>
-				<p>(b) The Government of Canada commits to its environmental responsibilities
-					under <acronym title="International Standards Organization">ISO</acronym> 14001&nbsp;certification;</p>
-				<p>(c) As a designated port, the Government of Canada will adhere to the
-					commitments required for international security as determined by the International
-					Ship and Port Security (ISPS) legislation. </p>
-				<p>(d) Businesses have a responsibility to maintain an environment where
-					conflict and difference can be addressed in a manner characterized by respect
-					and civility;</p>
-				<p>(e) All businesses are to accept responsibility for their actions and
-					activities; and</p>
-				<p>(f) Ethical behavior and goodwill demonstrated by all businesses is expected. </p>
+        <ol>
+          <li>(a) The Government of Canada operates the Esquimalt Graving Dock as an
+            open, public facility, providing service on a first-come, first-served basis.
+            Engaging in behavior contrary to its use as a unique public facility does
+            not allow for a healthy and competitive marketplace on the West Coast;</li>
+          <li>(b) The Government of Canada commits to its environmental responsibilities
+            under <acronym title="International Standards Organization">ISO</acronym> 14001&nbsp;certification;</li>
+          <li>(c) As a designated port, the Government of Canada will adhere to the
+            commitments required for international security as determined by the International
+            Ship and Port Security (ISPS) legislation. </li>
+          <li>(d) Businesses have a responsibility to maintain an environment where
+            conflict and difference can be addressed in a manner characterized by respect
+            and civility;</li>
+          <li>(e) All businesses are to accept responsibility for their actions and
+            activities; and</li>
+          <li>(f) Ethical behavior and goodwill demonstrated by all businesses is expected. </li>
+        </ol>
 				<p><strong>1.3&nbsp;Application of Code</strong>. This Code applies to all users
 					conducting business at the Esquimalt Graving Dock.</p>
 				<p><strong>1.4&nbsp;Scope of Obligations</strong>. Complying to the specific requirements
@@ -143,9 +148,11 @@
 				<p><strong>1.5&nbsp;Acknowledgement by Businesses. </strong>One senior authorized
 					officer of each respective business will acknowledge, in writing, to the
 					Manager, Esquimalt Graving Dock that:</p>
-				<p>(a) they have read and understood this Code; and</p>
-				<p>(b) in the case of each on-site user, compliance with this Code is a condition
-					of renewing an existing on-site lease or entering into a new on-site lease.</p>
+        <ol>
+          <li>(a) they have read and understood this Code; and</li>
+          <li>(b) in the case of each on-site user, compliance with this Code is a condition
+            of renewing an existing on-site lease or entering into a new on-site lease.</li>
+        </ol>
 				<p><strong>1.6&nbsp;Timing of Acknowledgement</strong>. The senior authorized
 					officer of each respective business will deliver the acknowledgement described
 					in Article 1.5&nbsp;of this Code to the Manager, Esquimalt Graving Dock within
@@ -161,15 +168,17 @@
 				<h3> <strong>ETHICAL VALUES</strong></h3>
 				<p><strong>2.1&nbsp;Ethical values to demonstrate</strong>. As an open, multi-user
 					public facility, owned by the Government of Canada, businesses will demonstrate:</p>
-				<p>(a) <em>Democratic values</em> by complying with Canada&rsquo;s obligations
-					and all relevant laws to serve the public interest;</p>
-				<p>(b) <em>Professional values</em> by being accountable and responsible
-					as a corporate body; </p>
-				<p>(c) <em>Ethical values</em> by being accountable at all times to preserve
-					public confidence and the integrity of the Government of Canada; and</p>
-				<p>(d) <em>People values</em> by demonstrating respect, fairness, openness
-					and courtesy in dealings with Esquimalt Graving Dock staff, clients, suppliers,
-					colleagues and citizens of Canada.</p>
+        <ol>
+          <li>(a) <em>Democratic values</em> by complying with Canada&rsquo;s obligations
+            and all relevant laws to serve the public interest;</li>
+          <li>(b) <em>Professional values</em> by being accountable and responsible
+            as a corporate body; </li>
+          <li>(c) <em>Ethical values</em> by being accountable at all times to preserve
+            public confidence and the integrity of the Government of Canada; and</li>
+          <li>(d) <em>People values</em> by demonstrating respect, fairness, openness
+            and courtesy in dealings with Esquimalt Graving Dock staff, clients, suppliers,
+            colleagues and citizens of Canada.</li>
+        </ol>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
 				<h2><strong>ARTICLE 3&nbsp;</strong></h2>
@@ -188,56 +197,60 @@
 					actions and hold everyone to the highest standard of respectful and responsible
 					behavior. The Esquimalt Graving Dock will only seek business relationships
 					which:</p>
-				<p>(a) Do not negatively affect the reputation of the Esquimalt Graving Dock;</p>
-				<p>(b) Support its standards of service quality and efficiency;</p>
-				<p>(c) Support its objectives and contribute to the growth of the industry;</p>
-				<p>(d) Support its business principles and environmental objectives; and</p>
-				<p>(e) Are mutually beneficial and lead to success through fair dealing and
-					high standards of business integrity.</p>
+        <ol>
+          <li>(a) Do not negatively affect the reputation of the Esquimalt Graving Dock;</li>
+          <li>(b) Support its standards of service quality and efficiency;</li>
+          <li>(c) Support its objectives and contribute to the growth of the industry;</li>
+          <li>(d) Support its business principles and environmental objectives; and</li>
+          <li>(e) Are mutually beneficial and lead to success through fair dealing and
+            high standards of business integrity.</li>
+        </ol>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
 				<h2><strong>ARTICLE 4&nbsp;</strong></h2>
 				<h3><strong>STANDARDS OF BEHAVIOUR</strong></h3>
 				<p><strong>4.1&nbsp;Obligations of businesses.</strong> All businesses operating
 					at the facility must:</p>
-				<p>(a) Respect and comply with all applicable local, national and international
-					laws, regulations, treaties and industry standards;</p>
-				<p>(b) Comply with the Esquimalt Graving Dock&rsquo;s Best Management Practices
-					Manuals (as may be amended from time to time);</p>
-				<p>(c) Treat one another with dignity and respect at all times;</p>
-				<p>(d) Communicate the provisions of this Code of Conduct to all employees
-					engaged in work at the Esquimalt Graving Dock in a place readily accessible
-					to employees at all times;</p>
-				<p>(e) Demonstrate a responsibility to contribute to the Esquimalt Graving
-					Dock&rsquo;s reputation by carrying out work conscientiously, efficiently
-					and honestly while maintaining the highest standards of integrity and conduct
-					in all operations which affect the Esquimalt Graving Dock;</p>
-				<p>(f) Not interfere with, and show proper care and regard for, the property
-					and assets belonging to the Government of Canada and the property and assets
-					of others;</p>
-				<p>(g) Not misrepresent the services and equipment provided by the Government
-					of Canada as services and equipment provided by its company;</p>
-				<p>(h) Not intentionally obstruct the operations of any business carrying
-					out work at the Esquimalt Graving Dock;</p>
-				<p>(i) In advertising and in communications with others, be identified as <em>tenants</em> of
-					the Esquimalt Graving Dock, <em>a</em><em> Government of Canada facility</em>,
-					providing <em>services</em> to marine operators or shipping companies;</p>
-				<p>(j) Be a good corporate citizen by respecting and adhering to the commitments
-					of the Esquimalt Graving Dock Environmental Management System, including
-					mandatory attendance at the Joint Users Safety and Environment Committee,
-					compliance with all audits, and the participation in all practice drills;</p>
-				<p>(k) Conduct business in a manner that considers and mitigates negative
-					impacts to the environment and to the health, safety and well-being of all
-					on-site users and the surrounding community;</p>
-				<p>(l) Senior executives will engage in immediate corrective action where
-					there is an immediate negative impact or threat to the environment or health
-					and safety of others;</p>
-				<p>(m) Request the Manager&rsquo;s approval for all media access to the Esquimalt
-					Graving Dock site, which will not be unreasonably denied;</p>
-				<p>(n) Demonstrate a willingness to cooperate with other users of the Esquimalt
-					Graving Dock; and</p>
-				<p>(o) Ensure that all subcontractors working at the Esquimalt Graving Dock
-					receive a copy of this Code of Conduct.</p>
+        <ol>
+          <li>(a) Respect and comply with all applicable local, national and international
+            laws, regulations, treaties and industry standards;</li>
+          <li>(b) Comply with the Esquimalt Graving Dock&rsquo;s Best Management Practices
+            Manuals (as may be amended from time to time);</li>
+          <li>(c) Treat one another with dignity and respect at all times;</li>
+          <li>(d) Communicate the provisions of this Code of Conduct to all employees
+            engaged in work at the Esquimalt Graving Dock in a place readily accessible
+            to employees at all times;</li>
+          <li>(e) Demonstrate a responsibility to contribute to the Esquimalt Graving
+            Dock&rsquo;s reputation by carrying out work conscientiously, efficiently
+            and honestly while maintaining the highest standards of integrity and conduct
+            in all operations which affect the Esquimalt Graving Dock;</li>
+          <li>(f) Not interfere with, and show proper care and regard for, the property
+            and assets belonging to the Government of Canada and the property and assets
+            of others;</li>
+          <li>(g) Not misrepresent the services and equipment provided by the Government
+            of Canada as services and equipment provided by its company;</li>
+          <li>(h) Not intentionally obstruct the operations of any business carrying
+            out work at the Esquimalt Graving Dock;</li>
+          <li>(i) In advertising and in communications with others, be identified as <em>tenants</em> of
+            the Esquimalt Graving Dock, <em>a</em><em> Government of Canada facility</em>,
+            providing <em>services</em> to marine operators or shipping companies;</li>
+          <li>(j) Be a good corporate citizen by respecting and adhering to the commitments
+            of the Esquimalt Graving Dock Environmental Management System, including
+            mandatory attendance at the Joint Users Safety and Environment Committee,
+            compliance with all audits, and the participation in all practice drills;</li>
+          <li>(k) Conduct business in a manner that considers and mitigates negative
+            impacts to the environment and to the health, safety and well-being of all
+            on-site users and the surrounding community;</li>
+          <li>(l) Senior executives will engage in immediate corrective action where
+            there is an immediate negative impact or threat to the environment or health
+            and safety of others;</li>
+          <li>(m) Request the Manager&rsquo;s approval for all media access to the Esquimalt
+            Graving Dock site, which will not be unreasonably denied;</li>
+          <li>(n) Demonstrate a willingness to cooperate with other users of the Esquimalt
+            Graving Dock; and</li>
+          <li>(o) Ensure that all subcontractors working at the Esquimalt Graving Dock
+            receive a copy of this Code of Conduct.</li>
+        </ol>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
 				<h2><strong>ARTICLE 5&nbsp;</strong></h2>
@@ -246,10 +259,12 @@
 					monitor compliance to this Code. Where there is a written disclosure made
 					to the Manager, Esquimalt Graving Dock or the Regional Director General
 					which indicates a failure to comply with this Code, it will be determined:</p>
-				<p>(a) whether the disclosure indicates non-compliance to Article 4&nbsp;of this
-					Code; and</p>
-				<p>(b) whether, if applicable, a business has failed to comply with this
-					Code. </p>
+        <ol>
+          <li>(a) whether the disclosure indicates non-compliance to Article 4&nbsp;of this
+            Code; and</li>
+          <li>(b) whether, if applicable, a business has failed to comply with this
+            Code. </li>
+        </ol>
 				<p><strong>5.2&nbsp;Notice of Non-Compliance</strong>. Upon making an initial
 					determination under Article 5.1, Esquimalt Graving Dock Management will
 					advise the affected business in writing.</p>
@@ -258,9 +273,11 @@
 					Code of Conduct by providing a written response to the Manager, Esquimalt
 					Graving Dock within seven (7) calendar days of receiving a notice of non-compliance.
 					Such written response will identify:</p>
-				<p>(a) the causes of the non-compliance;</p>
-				<p>(b) the actions taken to correct the non-compliance; and</p>
-				<p>(c) steps taken to prevent recurrence.</p>
+        <ol>
+          <li>(a) the causes of the non-compliance;</li>
+          <li>(b) the actions taken to correct the non-compliance; and</li>
+          <li>(c) steps taken to prevent recurrence.</li>
+        </ol>
 				<p>The acceptability of the corrective and preventative actions will be determined
 					by the Manager, Esquimalt Graving Dock, within seven (7) calendar days,
 					after further review of all relevant information. </p>
