Convert dl list to floated spans

--- a/entreprises-firms-fra.html
+++ b/entreprises-firms-fra.html
@@ -45,6 +45,11 @@
 <style type="text/css" media="all">
 @import url(/clf20/css/base2.css);
 </style>
+<style type="text/css" media="all">
+  span.label { font-weight: bold; width: 40%; float: left; }
+  span.value { width: 60%; float: right; }
+  div.center { overflow: hidden; }
+</style>
 <!-- TEMPLATE SCRIPTS/CSS END | FIN DES SCRIPTS/CSS DU GABARIT -->
 <!-- PROGRESSIVE ENHANCEMENT BEGINS | DEBUT DE L'AMELIORATION PROGRESSIVE -->
 <script src="/clf20/scripts/pe-ap.js" type="text/javascript"></script>
@@ -91,7 +96,8 @@
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
 					Entreprises de radoub
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-					</h1>
+        </h1>
+
 				<p>Ces liens sont destin&eacute;s aux usagers du site web de Travaux publics
 					et Services gouvernementaux Canada (<acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>). <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym> n'est pas responsable
 					de l'information qu'ils contiennent. Les liens qui donnent acc&egrave;s &agrave; des
@@ -101,199 +107,207 @@
 
 				<h2>Esquimalt Drydock Co. Ldd. </h2>
 
-				<dl>
+        <span class="label">T&eacute;l.&nbsp;:</span>
+        <span class="value">250-386-4172</span>
+        <br style="clear: both" />
 
-					<dt>T&eacute;l.&nbsp;:</dt>
-					<dd>250-386-4172&nbsp;</dd>
+        <span class="label">Fax&nbsp;:</span>
+        <span class="value">250-386-2087</span>
+        <br style="clear: both" />
 
+        <span class="label">Services offerts&nbsp;:</span>
+        <span class="value">Service complet de radoub et de transformation.</span>
+        <br style="clear: both" />
 
-					<dt>Fax&nbsp;:</dt>
-					<dd>250-386-2087</dd>
+        <span class="label">Nombre d'employ&eacute;s&nbsp;:</span>
+        <span class="value">200</span>
+        <br style="clear: both" />
 
+        <span class="label">Sp&eacute;cialisations&nbsp;:</span>
+        <span class="value">Navires de p&ecirc;che en haute mer, navires commerciaux.</span>
+        <br style="clear: both" />
 
-					<dt>Services offerts&nbsp;:</dt>
-					<dd>Service complet de radoub et de transformation.</dd>
+        <span class="label">Courriel&nbsp;:</span>
+        <span class="value"><a href="mailto:esquimalt@telus.net"> esquimalt@telus.net </a></span>
+        <br style="clear: both" />
 
+        <div class="topPage"> 
+          <a href="#tphp" title="Retourner au haut de la page">
+            <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+            Haut de la page
+          </a> 
+        </div>
+        <br style="clear: both" />
 
-					<dt>Nombre d'employ&eacute;s&nbsp;:</dt>
-					<dd>200</dd>
-
-
-					<dt>Sp&eacute;cialisations&nbsp;:</dt>
-					<dd>Navires de p&ecirc;che en haute mer, navires commerciaux.</dd>
-
-
-					<dt>Courriel&nbsp;:</dt>
-					<dd><a href="mailto:esquimalt@telus.net"> esquimalt@telus.net </a></dd>
-
-				</dl>
-
-
-				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-					Haut de la page</a> </div>
 				<h2>Intercon Marine Inc. </h2>
+				
+        <span class="label">T&eacute;l.&nbsp;:</span>
+        <span class="value">250-389-0391</span>
+        <br style="clear: both" />
 
-				<dl>
-					<dt>T&eacute;l.&nbsp;:</dt>
-					<dd>250-389-0391</dd>
+        <span class="label">Fax&nbsp;:</span>
+        <span class="value">250-389-0342</span>
+        <br style="clear: both" />
 
+        <span class="label">Services offerts&nbsp;:</span>
+        <span class="value">R&eacute;paration et maintenance navales.</span>
+        <br style="clear: both" />
 
-					<dt>Fax&nbsp;:</dt>
-					<dd>250-389-0342</dd>
+        <span class="label">Nombre d'employ&eacute;s&nbsp;:</span>
+        <span class="value">10-60</span>
+        <br style="clear: both" />
 
+        <span class="label">Sp&eacute;cialisations&nbsp;:</span>
+        <span class="value">Levage de charges lourdes, extraction, ancres et cha&icirc;nes,
+          levage et halage, gouvernails et arbres d'h&eacute;lice, fabrication,
+          distribution d'&eacute;quipement.</span>
+        <br style="clear: both" />
 
-					<dt>Services offerts&nbsp;:</dt>
-					<dd>R&eacute;paration et maintenance navales.</dd>
+        <span class="label">Courriel&nbsp;:</span>
+        <span class="value"><a href="mailto:info@interconmarine.com">info@interconmarine.com</a></span>
+        <br style="clear: both" />
 
+        <div class="topPage"> 
+          <a href="#tphp" title="Retourner au haut de la page">
+            <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+            Haut de la page
+          </a> 
+        </div>
 
-					<dt>Nombre d'employ&eacute;s&nbsp;:</dt>
-					<dd>10-60</dd>
-
-
-					<dt>Sp&eacute;cialisations&nbsp;:</dt>
-					<dd>Levage de charges lourdes, extraction, ancres et cha&icirc;nes,
-						levage et halage, gouvernails et arbres d'h&eacute;lice, fabrication,
-						distribution d'&eacute;quipement.</dd>
-
-					<dt>Courriel&nbsp;:</dt>
-					<dd><a href="mailto:info@interconmarine.com">info@interconmarine.com</a></dd>
-				</dl>
-
-
-				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-					Haut de la page</a> </div>
 				<h2>Jenkins Marine Ldd.</h2>
 
-				<dl>
+        <span class="label">T&eacute;l.&nbsp;:</span>
+        <span class="value">250-383-6440&nbsp;</span>
+        <br style="clear: both" />
 
-					<dt>T&eacute;l.&nbsp;:</dt>
-					<dd>250-383-6440&nbsp;</dd>
+        <span class="label">Fax&nbsp;:</span>
+        <span class="value">250-383-6406</span>
+        <br style="clear: both" />
 
+        <span class="label">Services offerts&nbsp;:</span>
+        <span class="value">R&eacute;parations majeures et mineures, radoub, sauvetage,
+          finition, restauration</span>
+        <br style="clear: both" />
 
-					<dt>Fax&nbsp;:</dt>
-					<dd>250-383-6406</dd>
+        <span class="label">Nombre d'employ&eacute;s&nbsp;:</span>
+        <span class="value">30-60</span>
+        <br style="clear: both" />
 
+        <span class="label">Sp&eacute;cialisations&nbsp;:</span>
+        <span class="value"> Acier, bois, fibre de verre, &eacute;tranger et canadien,
+          gouvernement, minist&egrave;re de la D&eacute;fense nationale, &eacute;lectricit&eacute;. </span>
+        <br style="clear: both" />
 
-					<dt>Services offerts&nbsp;:</dt>
-					<dd>R&eacute;parations majeures et mineures, radoub, sauvetage,
-						finition, restauration</dd>
+        <span class="label">Courriel&nbsp;:</span>
+        <span class="value"><a href="mailto:jenkins@pacificcoast.net">jenkins@pacificcoast.net</a></span>
+        <br style="clear: both" />
 
+        <div class="topPage"> 
+          <a href="#tphp" title="Retourner au haut de la page">
+            <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+            Haut de la page
+          </a> 
+        </div>
 
-					<dt>Nombre d'employ&eacute;s&nbsp;:</dt>
-					<dd>30-60</dd>
-
-
-					<dt>Sp&eacute;cialisations&nbsp;:</dt>
-					<dd> Acier, bois, fibre de verre, &eacute;tranger et canadien,
-						gouvernement, minist&egrave;re de la D&eacute;fense nationale, &eacute;lectricit&eacute;. </dd>
-
-
-					<dt>Courriel&nbsp;:</dt>
-					<dd><a href="mailto:jenkins@pacificcoast.net">jenkins@pacificcoast.net</a></dd>
-
-				</dl>
-
-				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-					Haut de la page</a> </div>
 				<h2>Peninsula Waste Water Services Ldd. </h2>
 
-				<dl>
+        <span class="label">T&eacute;l.&nbsp;:</span>
+        <span class="value">250-380-0436</span>
+        <br style="clear: both" />
 
-					<dt>T&eacute;l.&nbsp;:</dt>
-					<dd>250-380-0436</dd>
+        <span class="label">Fax&nbsp;:</span>
+        <span class="value">250-380-0437</span>
+        <br style="clear: both" />
 
+        <span class="label">Services offerts&nbsp;:</span>
+        <span class="value">Traitement et &eacute;limination des hydrocarbures et des
+          <br style="clear: both" />
+        d&eacute;chets contamin&eacute;s.</span>
 
-					<dt>Fax&nbsp;:</dt>
-					<dd>250-380-0437</dd>
+        <span class="label">Nombre d'employ&eacute;s&nbsp;:</span>
+        <span class="value">7-10</span>
+        <br style="clear: both" />
 
+        <span class="label">Sp&eacute;cialisations&nbsp;:</span>
+        <span class="value">Traitement et &eacute;limination des eaux
+          de cale, des eaux contamin&eacute;es, des eaux mazouteuses, du mazout
+          et des boues. Courtier en mazout. Services de consultation en environnement.
+        Organisation de services de transport.</span>
+        <br style="clear: both" />
 
-					<dt>Services offerts&nbsp;:</dt>
-					<dd>Traitement et &eacute;limination des hydrocarbures et des
-					d&eacute;chets contamin&eacute;s.</dd>
+        <span class="label">Courriel&nbsp;:</span>
+        <span class="value"><a href="mailto:plehmann@pwwsldd.com">plehmann@pwwsldd.com</a></span>
+        <br style="clear: both" />
 
-
-					<dt>Nombre d'employ&eacute;s&nbsp;:</dt>
-					<dd>7-10</dd>
-
-
-					<dt>Sp&eacute;cialisations&nbsp;:</dt>
-					<dd>Traitement et &eacute;limination des eaux
-						de cale, des eaux contamin&eacute;es, des eaux mazouteuses, du mazout
-						et des boues. Courtier en mazout. Services de consultation en environnement.
-					Organisation de services de transport.</dd>
-
-
-					<dt>Courriel&nbsp;:</dt>
-					<dd><a href="mailto:plehmann@pwwsldd.com">plehmann@pwwsldd.com</a></dd>
-
-				</dl>
-
-				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-					Haut de la page</a> </div>
+        <div class="topPage"> 
+          <a href="#tphp" title="Retourner au haut de la page">
+            <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+            Haut de la page
+          </a> 
+        </div>
 				<h2>South Coast Diving Co. Ldd. </h2>
 
-				<dl>
+        <span class="label">T&eacute;l.&nbsp;:</span>
+        <span class="value">250-361-1556</span>
+        <br style="clear: both" />
 
-					<dt>T&eacute;l.&nbsp;:</dt>
-					<dd>250-361-1556</dd>
+        <span class="label">Fax&nbsp;:</span>
+        <span class="value">250-361-1595</span>
+        <br style="clear: both" />
 
+        <span class="label">Services offerts&nbsp;:</span>
+        <span class="value">Service complet de r&eacute;parations sous eau (sur place),
+        d'&eacute;tudes et d'entretien.</span>
+        <br style="clear: both" />
 
-					<dt>Fax&nbsp;:</dt>
-					<dd>250-361-1595</dd>
+        <span class="label">Nombre d'employ&eacute;s&nbsp;:</span>
+        <span class="value">5&nbsp;- 20</span>
+        <br style="clear: both" />
 
+        <span class="label">Sp&eacute;cialisations&nbsp;:</span>
+        <span class="value">Navires canadiens, autres gouvernements, paquebots de croisi&egrave;re,
+          navires de haute mer (moyens &agrave; grands), navires commerciaux et
+        priv&eacute;s.</span>
+        <br style="clear: both" />
 
-					<dt>Services offerts&nbsp;:</dt>
-					<dd>Service complet de r&eacute;parations sous eau (sur place),
-					d'&eacute;tudes et d'entretien.</dd>
+        <span class="label">Courriel&nbsp;:</span>
+        <span class="value"><a href="mailto:scdldive@islandnet.com">scdldive@islandnet.com</a> </span>
+        <br style="clear: both" />
 
+        <div class="topPage"> 
+          <a href="#tphp" title="Retourner au haut de la page">
+            <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+            Haut de la page
+          </a> 
+        </div>
 
-					<dt>Nombre d'employ&eacute;s&nbsp;:</dt>
-					<dd>5&nbsp;- 20</dd>
-
-
-					<dt>Sp&eacute;cialisations&nbsp;:</dt>
-					<dd>Navires canadiens, autres gouvernements, paquebots de croisi&egrave;re,
-						navires de haute mer (moyens &agrave; grands), navires commerciaux et
-					priv&eacute;s.</dd>
-
-
-					<dt>Courriel&nbsp;:</dt>
-					<dd><a href="mailto:scdldive@islandnet.com">scdldive@islandnet.com</a> </dd>
-
-				</dl>
-
-				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-					Haut de la page</a> </div>
 				<h2>Victoria Shipyards Co. Ldd. </h2>
 
-				<dl>
+        <span class="label">T&eacute;l.&nbsp;:</span>
+        <span class="value">250-380-1602</span>
+        <br style="clear: both" />
 
-					<dt>T&eacute;l.&nbsp;:</dt>
-					<dd>250-380-1602</dd>
+        <span class="label">Fax&nbsp;:</span>
+        <span class="value">250-995-6599&nbsp;</span>
+        <br style="clear: both" />
 
+        <span class="label">Services offerts&nbsp;:</span>
+        <span class="value">Service complet de radoub et de transformations, et installation
+        de construction avec service de r&eacute;paration mobile.</span>
+        <br style="clear: both" />
 
-					<dt>Fax&nbsp;:</dt>
-					<dd>250-995-6599&nbsp;</dd>
+        <span class="label">Nombre d'employ&eacute;s&nbsp;:</span>
+        <span class="value">200-700</span>
+        <br style="clear: both" />
 
+        <span class="label">Sp&eacute;cialisations&nbsp;:</span>
+        <span class="value">Grands navires de haute mer et paquebots de croisi&egrave;re.
+        R&eacute;paration et entretien.</span>
+        <br style="clear: both" />
 
-					<dt>Services offerts&nbsp;:</dt>
-					<dd>Service complet de radoub et de transformations, et installation
-					de construction avec service de r&eacute;paration mobile.</dd>
-
-
-					<dt>Nombre d'employ&eacute;s&nbsp;:</dt>
-					<dd>200-700</dd>
-
-
-					<dt>Sp&eacute;cialisations&nbsp;:</dt>
-					<dd>Grands navires de haute mer et paquebots de croisi&egrave;re.
-					R&eacute;paration et entretien.</dd>
-
-					<dt>Courriel&nbsp;:</dt>
-					<dd><a href="mailto:info@vicship.com">info@vicship.com</a> </dd>
-
-				</dl>
-
+        <span class="label">Courriel&nbsp;:</span>
+        <span class="value"><a href="mailto:info@vicship.com">info@vicship.com</a></span>
+        <br style="clear: both" />
 			</div>
 
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
