--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -92,7 +92,7 @@
 				Environmental Program
 				<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 		  </h1>
-			<p style="text-align:center; font-style:italic">It is the goal of the Esquimalt
+			<p style="text-align:center;">It is the goal of the Esquimalt
 				Graving Dock, in partnership with the ship repair industry, to be the premier
 				ship repair, construction and maintenance facility on the west coast of North
 				America.</p>
