Use <em> tag instead of font-style: italic

--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -92,10 +92,10 @@
 				Environmental Program
 				<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 		  </h1>
-			<p style="text-align:center;">It is the goal of the Esquimalt
+      <p style="text-align:center;"><em>It is the goal of the Esquimalt
 				Graving Dock, in partnership with the ship repair industry, to be the premier
 				ship repair, construction and maintenance facility on the west coast of North
-				America.</p>
+        America.</em></p>
 			<img src="../images/croisiere-cruise.jpg" alt="Cruise ship in dock" width="250" height="212" style="float: right; padding-left: 10px;" />The
 				Esquimalt Graving Dock and its users recognize that responsible environmental
 				management is an integral part of attaining that goal. In order to ensure
