--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -96,36 +96,44 @@
 				Graving Dock, in partnership with the ship repair industry, to be the premier
 				ship repair, construction and maintenance facility on the west coast of North
         America.</em></p>
-			<img src="../images/croisiere-cruise.jpg" alt="Cruise ship in dock" width="250" height="212" style="float: right; padding-left: 10px;" />The
-				Esquimalt Graving Dock and its users recognize that responsible environmental
+
+			<img src="../images/croisiere-cruise.jpg" alt="Cruise ship in dock" width="250" height="212" style="float: right; padding-left: 10px;" />
+
+      <p>
+        The	Esquimalt Graving Dock and its users recognize that responsible environmental
 				management is an integral part of attaining that goal. In order to ensure
 				business at the facility is conducted in an environmentally responsible manner,
 				the <acronym title="Esquimalt Graving Dock">EGD</acronym> has implemented
 				an Environmental Management System (<acronym title="Environmental Management System">EMS</acronym>)
 				certified to the internationally recognized <acronym title="International Organization for Standardization">ISO</acronym> 14001 <acronym title="Environmental Management System">EMS</acronym> standard.
+      </p>
 
-					<h2 id="iso"><acronym title="International Organization for Standardization">ISO</acronym> 14001</h2>
-					<p>The <acronym title="International Organization for Standardization">ISO</acronym> 14001
-						certification is an internationally recognized standard for the development
-						and implementation of an Environmental Management System (<acronym title="Environmental Management System">EMS</acronym>).
-						Qualifying for this recognition in 2001, the <acronym title="Esquimalt Graving Dock">EGD</acronym> has
-						implemented this management system to help identify and prioritize environmental
-						issues on site.</p>
-					<p>By signing the <acronym title="Esquimalt Graving Dock">EGD</acronym> <a href="politique-policy-eng.html">Environmental
-							Policy</a>, upper management has made a commitment towards the prevention
-							of pollution, the protection of the natural environment and the compliance
-							with applicable environmental regulations and standards.</p>
-			
-				
-			    <p>Since certification in 2001, this environmental management system has provided
-				the framework for the implementation of successful, cost effective environmental
-				programs and initiatives. These programs help ensure on site businesses conduct
-				their operations in a conscientious manner by reducing environmental impacts
-				and demonstrating consideration for the health, safety and well being of
-				on-site users and the surrounding community.</p>
+      <h2 id="iso"><acronym title="International Organization for Standardization">ISO</acronym> 14001</h2>
+
+      <p>The <acronym title="International Organization for Standardization">ISO</acronym> 14001
+        certification is an internationally recognized standard for the development
+        and implementation of an Environmental Management System (<acronym title="Environmental Management System">EMS</acronym>).
+        Qualifying for this recognition in 2001, the <acronym title="Esquimalt Graving Dock">EGD</acronym> has
+        implemented this management system to help identify and prioritize environmental
+        issues on site.</p>
+
+      <p>By signing the <acronym title="Esquimalt Graving Dock">EGD</acronym> <a href="politique-policy-eng.html">Environmental
+          Policy</a>, upper management has made a commitment towards the prevention
+          of pollution, the protection of the natural environment and the compliance
+          with applicable environmental regulations and standards.</p>
+    
+      <p>Since certification in 2001, this environmental management system has provided
+      the framework for the implementation of successful, cost effective environmental
+      programs and initiatives. These programs help ensure on site businesses conduct
+      their operations in a conscientious manner by reducing environmental impacts
+      and demonstrating consideration for the health, safety and well being of
+      on-site users and the surrounding community.</p>
+
 			<p>The Esquimalt Graving Dock's commitment to environmental protection is
 				outlined in the <acronym title="Esquimalt Graving Dock">
-				EGD</acronym> <a href="politique-policy-eng.html">Environmental Policy</a>.			</p>
+          EGD</acronym> <a href="politique-policy-eng.html">Environmental Policy</a>.
+      </p>
+
 			<ul style="list-style-type:none; padding-left:0; margin-left:0;">
 				<li><a href="gestion-management-eng.html">Environmental Management</a>
 					<ul style="list-style-type:none">
