Provide more descriptive table summary

--- a/dimensions-eng.html
+++ b/dimensions-eng.html
@@ -124,7 +124,7 @@
 				</div>
 				<div style="clear:right;">
 				<h2>Technical Information</h2>
-				<table summary="Technical Information: area and metres" class="basic">
+				<table summary="This table provides dimensions for various areas of the dock, in metres" class="basic">
 					<tr>
 						<th id="area"> <b>AREA</b> </th>
 						<th id="metres"> <b>METRES</b> </th>
