--- a/dimensions-fra.html
+++ b/dimensions-fra.html
@@ -117,7 +117,7 @@
 				</div>
 				<div style="clear:right;">
 					<h2>Caract&eacute;ristiques techniques</h2>
-					<table summary="Caract&eacute;ristiques techniques: superficie et m&egrave;tres" class="basic">
+					<table summary="Ce tableau fournit des dimensions pour divers domaines de la cale, en m&egrave;tres" class="basic">
 						<tr>
 							<th id="SUPERFICIE"> <b>SUPERFICIE</b></th>
 							<th id="METRES"> <b>M&Egrave;TRES</b></th>
