--- a/dimensions-fra.html
+++ b/dimensions-fra.html
@@ -127,7 +127,7 @@
 							<td headers="METRES">361,48</td>
 						</tr>
 						<tr>
-							<td colspan="2">Longueur int&eacute;rieure libre, caisson en place
+							<td colspan="2" headers="SUPERIFICE METRES">Longueur int&eacute;rieure libre, caisson en place
 									:</td>
 						</tr>
 						<tr>
