Move supporting image below section heading

--- a/env/gestion-management-fra.html
+++ b/env/gestion-management-fra.html
@@ -151,18 +151,17 @@
 						Haut de la page</a> </div>
 				</div>
 				<br />
-				<div class="option2" style="float: right; clear:right;">
-					<div class="smallFont" style="float:right; padding-left:10px; padding-top:10px; padding-bottom:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/velo-bike.jpg" alt="&Eacute;quipe de la Semaine v&eacute;lo-boulot de la CSE de 2004" width="200" height="150" /><br />
-						&Eacute;quipe de la Semaine v&eacute;lo-boulot de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> de
-						2004</div>
-					<h2 id="participation">Participation et information</h2>
-					<p>La cale s&egrave;che d'Esquimalt participe &agrave; des activit&eacute;s
-						d'information et d'&eacute;ducation, comme des visites &eacute;ducatives,
-						la Semaine v&eacute;lo-boulot du Grand Victoria et le Programme de passeport
-						d'&eacute;cocivisme de <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym> pour promouvoir la sensibilisation &agrave; l'environnement.</p>
-					<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-						Haut de la page</a> </div>
-				</div>
+        <h2 id="participation">Participation et information</h2>
+        <div class="smallFont" style="float:right; padding-left:10px; padding-bottom:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/velo-bike.jpg" alt="&Eacute;quipe de la Semaine v&eacute;lo-boulot de la CSE de 2004" width="200" height="150" /><br />
+          &Eacute;quipe de la Semaine v&eacute;lo-boulot de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> de
+          2004</div>
+        <p>La cale s&egrave;che d'Esquimalt participe &agrave; des activit&eacute;s
+          d'information et d'&eacute;ducation, comme des visites &eacute;ducatives,
+          la Semaine v&eacute;lo-boulot du Grand Victoria et le Programme de passeport
+          d'&eacute;cocivisme de <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym> pour promouvoir la sensibilisation &agrave; l'environnement.</p>
+        <br style="clear: both" />
+        <div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+          Haut de la page</a> </div>
 				<br />
 				<div style="clear:right;">
 					<h2 id="ee-ea">&Eacute;valuation environnementale (EE)</h2>
