--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -127,16 +127,15 @@
           <div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />Top of Page</a> </div>
 				</div>
 				<br />
-				<div  style="float: right; clear:right;">
-					<div class="smallFont" style="float:right; padding-left:10px; padding-top:10px; padding-bottom:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/velo-bike.jpg" title="2004 EGD Bike to Work Week Team" alt="2004 EGD Bike to Work Week Team" width="200" height="150" /><br />
-						2004 EGD Bike to Work Week Team</div>
 					<h2 id="participation">Participation and Outreach</h2>
+					<div class="smallFont" style="float:right; padding-left:10px; padding-bottom:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/velo-bike.jpg" title="2004 EGD Bike to Work Week Team" alt="2004 EGD Bike to Work Week Team" width="200" height="150" /><br />
+						2004 EGD Bike to Work Week Team</div>
 					<p>The Esquimalt Graving Dock promotes environmental awareness through participation
 						in outreach and educational events such as educational site tours, the
 						annual Greater Victoria Bike to Work Week and the <acronym title="Public Works and Government Services Canada">PWGSC</acronym> Green Citizen Passport
 						Programs.</p>
+          <br style="clear: both" />
           <div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />Top of Page</a> </div>
-				</div>
 				<br />
 				<div style="clear:right;">
 					<h2 id="ee-ea">Environmental Assessments (EA)</h2>
