--- a/env/gestion-management-fra.html
+++ b/env/gestion-management-fra.html
@@ -89,34 +89,16 @@
 					Gestion de l'environnement
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<div style="clear:right;">
-					<h2 id="iso"><acronym title="Organisation internationale de normailisation">ISO</acronym> 14001</h2>
-					<p>La certification <acronym title="Organisation internationale de normailisation">ISO</acronym> 14001
-						est un norme internationale concerant l'&eacute;laboration et la mise en &#339;uvre
-						d'un syst&egrave;me de gestion de l'environnement (<acronym title="syst&egrave;me de gestion de l'environnement">SGE</acronym>).
-						Admissible &agrave; cette certification en 2001, la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> a
-						mis en &#339;uvre ce syst&egrave;me de gestion afin de l'aider &agrave; cerner
-						les probl&egrave;mes environnementaux dans ses installations et &agrave; &eacute;tablir
-						un ordre de priorit&eacute; &agrave; cet &eacute;gard.</p>
-					<p>En adoptant la <a href="politique-policy-fra.html">Politique environnementale</a> de
-						la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>, la haute
-						direction s'est engag&eacute;e &agrave; pr&eacute;venir la pollution, &agrave; prot&eacute;ger
-						le milieu naturel et &agrave; respecter la r&eacute;glementation et les
-						normes environnementales applicables.</p>
-					<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-						Haut de la page</a> </div>
-				</div>
-				<br />
-				<div class="option2" style="clear:right; float: right;">
+				<div style="clear:right; float: right;">
 					<h2 id="mpge-ebmp">Meilleures pratiques de gestion
 						de l'environnement</h2>
 					<p>On s'attend &agrave; ce que quiconque m&egrave;ne des activit&eacute;s
 						dans les installations de la cale s&egrave;che d'Esquimalt le fasse dans
 						le respect de l'environnement, y compris en conformit&eacute; avec l'ensemble
 						de la r&eacute;glementation et des normes environnementales applicables. &Agrave; cetter
-						fin, la Cale s&egrave;che d'Esquimalt a &eacute;labor&eacute; une s&eacute;rie
-						d&eacute;taill&eacute;e de meilleures pratiques de gestion de l'environnement
-						(<acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym>).</p>
+						fin, la Cale s&egrave;che d'Esquimalt a &eacute;labor&eacute; une <a href="../files/ebmps-mpges.pdf">s&eacute;rie
+              d&eacute;taill&eacute;e de meilleures pratiques de gestion de l'environnement
+              (<acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym>)</a>.</p>
 					<p>Les meilleures pratiques de gestion de l'environnement (<acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym>)
 						constituent un moyen de r&eacute;duire et de pr&eacute;venir le rejet de
 						polluants dans l'environnement gr&acirc;ce &agrave; de bonnes pratiques
