--- a/historique-history-fra.html
+++ b/historique-history-fra.html
@@ -104,24 +104,15 @@
 					situ&eacute;e dans un bassin de roc, conditions id&eacute;ales pour l'am&eacute;nagement
 					d'une cale s&egrave;che. Il fallut pas moins de six ans pour construire
 					la cale, qui &eacute;tait la deuxi&egrave;me en importance au monde.</p>
-				<p> La cale s&egrave;che d'Esquimalt a &eacute;t&eacute; inaugur&eacute;e
-					le 1<sup>er</sup>&nbsp;juillet&nbsp;1927, dans le cadre des c&eacute;l&eacute;brations
-					du Jubil&eacute;e de diamant. Cette ann&eacute;e, la <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> c&eacute;l&egrave;bre
-					son 75<sup>e</sup> anniversaire avec une c&eacute;r&eacute;monie comm&eacute;morative &agrave; laquelle
-					assisteront l'Honorable David Anderson, ministre de l'Environnement et Son
-					Honneur le maire d'Esquimalt, Ray Rice.</p>
-				<div class="smallFont" style="text-align: center; font-weight:bold;"><img src="images/ceremon.jpg" alt="Une capsule historique est dédicacée" width="425" height="319" /><br />
+							<div class="smallFont" style="text-align: center; font-weight:bold;"><img src="images/ceremon.jpg" alt="Une capsule historique est dédicacée" width="425" height="319" /><br />
 					Le ministre de l'Environnement, l'Honorable David Anderson
 						et Son Honneur le maire d'Esquimalt, Ray Rice, en compagnie de Jack Gale,
 						de la Cale s&egrave;che d'Esquimalt, lors de la c&eacute;r&eacute;monie
-						comm&eacute;morative qui s'est tenue le 1<sup>er</sup>&nbsp;juillet 2002. </div>
+						comm&eacute;morative qui s'est tenue le 1<sup>er</sup>&nbsp;juillet&nbsp;2002. </div>
 				<h2>Articles</h2>
 				<p>(par Leah Prentice)</p>
 				<ul>
-					<li><a href="his/article-fra.html">Article QE II</a>&nbsp;&nbsp;(Juin
-						2002)</li>
-					<li><a href="his/ensemble-fra.html">Article d'<i>Ensemble</i></a>&nbsp;&nbsp;(Aout
-						2002)</li>
+					<li><a href="his/article-fra.html">Article QE II</a>&nbsp;&nbsp;(Juin&nbsp;2002)</li>
 				</ul>
 				<h2> Photos</h2>
 				<p>Choisir une ann&eacute;e&nbsp;:</p>
